# log-parser-tool

./: .gitignore  README.md  main.py  parser.py  pyproject.toml  report.json  todo.md
genLog/: generate_logs.py
scripts/: check-pep8.sh  run-bookstore-server.sh  run-test.sh  run-testcase-bruno.sh
tests/: test_parser.py
tests/learning-bruno/api-verification/: Delete album.bru  Get ISBN.bru  Get album.bru  Get items.bru  Post album.bru  Put album.bru  bruno.json  results.html  results.json
tests/learning-fastAPI/: README.md  bookstore_db.py
tests/learning-fastAPI/frontend/: index.html  style.css
tests/learning-fastAPI/tests/: test_example.py  test_ui_bookstore.py
tests/learning-fastAPI/tests/.deepeval/: .deepeval_telemetry.txt
tests/learning-fastAPI/tests/pages/: index_page.py
tests/learning-test-AI/: API_Keys.txt  dump_reply.json  test_ai.py  test_loan_ai.py
tests/learning-test-AI/.deepeval/: .deepeval_telemetry.txt
