[project]
name = "test-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=3.8.0",
    "fastapi[standard]>=0.127.0",
    "flask>=3.1.2",
    "numpy>=2.3.5",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "ollama>=0.1.4",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

